@@ -1,3 +1,6 @@
+2002-03-01 00:45
+ TableStream:
+  - Full test coverage
 2002-03-01 00:15
  TableWriter:
   - Full test coverage
